Update title for that subtle back-end street cred 💪🏻

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <img src="/img/Logan-min-sq.jpg" alt="Picture of Logan">
       <div class="content--animation">
         <h1>Logan Houp</h1>
-        <h2>Front-end Developer</h2>
+        <h2>Web Developer</h2>
         <button class="contact">
           <a class="btn js-NoBots" data-mailto-user="houplogan" data-mailto-domain="gmail.com">Contact Me</a>
         </button>
