--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="I'm a front-end web developer and designer. I'll put something here soon. Stay tuned.">
+  <meta name="description" content="I'm a web developer and designer. I'll put something here soon. Stay tuned.">
   <meta name="author" content="Logan Houp">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta property="og:title" content="Logan Houp's Personal Site">
-  <meta property="og:description" content="I'm a front-end web developer and designer. I'll put something here soon. Stay tuned.">
+  <meta property="og:description" content="I'm a web developer and designer. I'll put something here soon. Stay tuned.">
   <meta property="og:image" content="http://loganhoup.com/thumbnail.png">
   <meta property="og:url" content="http://loganhoup.com">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>Logan Houp | Front-end Dev</title>
+  <title>Logan Houp | Web Developer</title>
   <style>
     body,
     html {
@@ -163,10 +163,10 @@
       align-items: center;
       width: 100%;
       height: 100%;
-      background: linear-gradient(to right, #2c3e50, #fd746c, #ff8235, #e73827);
+      background: linear-gradient(to right, #fd746c, #ff8235, #e73827);
       background-repeat: no-repeat;
-      background-size: 1000% 1000%;
-      animation: gradient 240s ease infinite
+      background-size: 1000% 100%;
+      animation: gradient 60s ease infinite
     }
 
     @keyframes gradient {
