--- a/index.html
+++ b/index.html
@@ -1,1 +1,143 @@
-<!DOCTYPE html><html lang="en"><head> <meta charset="UTF-8"> <meta name="description" content="I'm a web developer and designer. I'll put something here soon. Stay tuned."> <meta name="author" content="Logan Houp"> <meta name="viewport" content="width=device-width,initial-scale=1"> <meta property="og:title" content="Logan Houp's Personal Site"> <meta property="og:description" content="I'm a web developer and designer. I'll put something here soon. Stay tuned."> <meta property="og:image" content="http://loganhoup.com/thumbnail.png"> <meta property="og:url" content="http://loganhoup.com"> <link rel="shortcut icon" href="/favicon.ico"> <title>Logan Houp | Web Developer</title> <style>body, html{height: 100%; margin: 0; color: #fff}@keyframes slide-in{0%{transform: translateY(250px); opacity: 0;}100%{transform: translateY(0px); opacity: 1;}}@keyframes fade-in{0%{opacity: 0;}100%{opacity: 1;}}@keyframes gradient{0%{background-position: 0 0}50%{background-position: 100% 100%}100%{background-position: 0 0}}img{border-radius: 50%; border: 1px solid aliceblue; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); animation: slide-in 1s .25s forwards; max-width: 195px; z-index: -1; opacity: 0;}h1{font-family: Oswald, sans-serif; font-weight: 700; font-size: 80px; line-height: 5.5rem; text-transform: uppercase; z-index: 1; margin-top: 15px; text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); margin-bottom: 5px}h2{font-family: 'Open Sans', sans-serif; font-weight: 300; font-size: 28px; text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); margin-bottom: 45px}.sauce{position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center;}.content--animation{animation: fade-in 2.5s 1s forwards; opacity: 0;}.prettycolors{display: flex; flex-direction: row; justify-content: center; align-items: center; width: 100%; height: 100%; background: linear-gradient(to right, #fd746c, #ff8235, #e73827); background-repeat: no-repeat; background-size: 1000% 100%; animation: gradient 60s ease infinite}</style></head><body> <div id="loader"></div><div class="loader-section section-left"></div><div class="loader-section section-right"></div><div class="prettycolors"> <div class="sauce"> <img src="/img/Logan-min-sq.jpg" alt="Picture of Logan"> <div class="content--animation"> <h1>Logan Houp</h1> <h2>Web Developer</h2> </div></div></div><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script> <script defer> WebFont.load({google:{families: ["Oswald:700", "Open Sans"], text: "CcomntigaeSPORTFOLIOWEBSITE"}}), function (e){var t=e.createElement("script"), a=e.scripts[0]; t.src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js", t.async=!0, a.parentNode.insertBefore( t, a)}(document) </script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="I'm a web developer and designer. I'll put something here soon. Stay tuned.">
+    <meta name="author" content="Logan Houp">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta property="og:title" content="Logan Houp's Personal Site">
+    <meta property="og:description" content="I'm a web developer and designer. I'll put something here soon. Stay tuned.">
+    <meta property="og:image" content="http://loganhoup.com/thumbnail.png">
+    <meta property="og:url" content="http://loganhoup.com">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <title>Logan Houp | Web Developer</title>
+    <style>
+        body,
+        html {
+            height: 100%;
+            margin: 0;
+            color: #fff
+        }
+
+        @keyframes slide-in {
+            0% {
+                transform: translateY(250px);
+                opacity: 0;
+            }
+            100% {
+                transform: translateY(0px);
+                opacity: 1;
+            }
+        }
+
+        @keyframes fade-in {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @keyframes gradient {
+            0% {
+                background-position: 0 0
+            }
+            50% {
+                background-position: 100% 100%
+            }
+            100% {
+                background-position: 0 0
+            }
+        }
+
+        img {
+            border-radius: 50%;
+            border: 1px solid aliceblue;
+            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+            animation: slide-in 1s .25s forwards;
+            max-width: 195px;
+            z-index: -1;
+            opacity: 0;
+        }
+
+        h1 {
+            font-family: Oswald, sans-serif;
+            font-weight: 700;
+            font-size: 80px;
+            line-height: 5.5rem;
+            text-transform: uppercase;
+            z-index: 1;
+            margin-top: 15px;
+            text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+            margin-bottom: 5px
+        }
+
+        h2 {
+            font-family: 'Open Sans', sans-serif;
+            font-weight: 300;
+            font-size: 28px;
+            text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+            margin-bottom: 45px
+        }
+
+        .sauce {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+
+        .content--animation {
+            animation: fade-in 2.5s 1s forwards;
+            opacity: 0;
+        }
+
+        .prettycolors {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to right, #fd746c, #ff8235, #e73827);
+            background-repeat: no-repeat;
+            background-size: 1000% 100%;
+            animation: gradient 60s ease infinite
+        }
+    </style>
+</head>
+
+<body>
+    <div id="loader"></div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
+    <div class="prettycolors">
+        <div class="sauce">
+            <img src="/img/Logan-min-sq.jpg" alt="Picture of Logan">
+            <div class="content--animation">
+                <h1>Logan Houp</h1>
+                <h2>Web Developer</h2>
+            </div>
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+        WebFont.load({
+                google: {
+                    families: ["Oswald:700", "Open Sans"],
+                    text: "CcomntigaeSPORTFOLIOWEBSITE"
+                }
+            }),
+            function (e) {
+                var t = e.createElement("script"),
+                    a = e.scripts[0];
+                t.src = "https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js", t.async = !0, a.parentNode.insertBefore(
+                    t, a)
+            }(document)
+    </script>
+</body>
+
+</html>
