add better font fallbacks

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         }
 
         h1 {
-            font-family: Oswald, sans-serif;
+            font-family: "Oswald", Impact, "Franklin Gothic Bold", sans-serif;
             font-weight: 700;
             font-size: 80px;
             line-height: 5.5rem;
@@ -75,7 +75,7 @@
         }
 
         h2 {
-            font-family: 'Open Sans', sans-serif;
+            font-family: font-family: "Open Sans", "Segoe UI", Tahoma, sans-serif;
             font-weight: 300;
             font-size: 28px;
             text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
