test webfont fix

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         WebFont.load({
                 google: {
                     families: ["Oswald:700", "Open Sans"],
-                    text: "CcomntigaeSPORTFOLIOWEBSITE"
+                    text: "LOGANHOUPWEBDEVELOPER"
                 }
             }),
             function (e) {
