remove unnecessary alt text (context provided by heading)

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="loader-section section-right"></div>
     <div class="prettycolors">
         <div class="sauce">
-            <img src="/img/Logan-min-sq.jpg" alt="Picture of Logan">
+            <img src="/img/Logan-min-sq.jpg" alt="">
             <div class="content--animation">
                 <h1>Logan Houp</h1>
                 <h2>Web Developer</h2>
