--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         }
 
         h2 {
-            font-family: font-family: "Open Sans", "Segoe UI", Tahoma, sans-serif;
+            font-family: "Open Sans", "Segoe UI", Tahoma, sans-serif;
             font-weight: 300;
             font-size: 28px;
             text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
