--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         WebFont.load({
                 google: {
                     families: ["Oswald:700", "Open Sans"],
-                    text: "LOGANHOUPWEBDEVELOPER"
+                    text: "LOGANHUPWEBDVR"
                 }
             }),
             function (e) {
