add prefixes, css variables

--- a/index.html
+++ b/index.html
@@ -13,100 +13,159 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <title>Logan Houp | Web Developer</title>
     <style>
-        body,
-        html {
-            height: 100%;
-            margin: 0;
-            color: #fff
-        }
+       :root {
+    --shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
 
-        @keyframes slide-in {
-            0% {
-                transform: translateY(250px);
-                opacity: 0;
-            }
-            100% {
-                transform: translateY(0px);
-                opacity: 1;
-            }
-        }
+body,
+html {
+    height: 100%;
+    margin: 0;
+    color: #fff;
+}
 
-        @keyframes fade-in {
-            0% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
+img {
+    border-radius: 50%;
+    border: 1px solid #fff;
+    -webkit-box-shadow: var(--shadow);
+    box-shadow: var(--shadow);
+    -webkit-animation: slide-in 1s 0.25s forwards;
+    animation: slide-in 1s 0.25s forwards;
+    max-width: 195px;
+    z-index: -1;
+    opacity: 0;
+}
 
-        @keyframes gradient {
-            0% {
-                background-position: 0 0
-            }
-            50% {
-                background-position: 100% 100%
-            }
-            100% {
-                background-position: 0 0
-            }
-        }
+h1,
+h2 {
+    text-shadow: var(--shadow);
+}
 
-        img {
-            border-radius: 50%;
-            border: 1px solid aliceblue;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-            animation: slide-in 1s .25s forwards;
-            max-width: 195px;
-            z-index: -1;
-            opacity: 0;
-        }
+h1 {
+    font-family: "Oswald", Impact, "Franklin Gothic Bold", sans-serif;
+    font-weight: 700;
+    font-size: 80px;
+    line-height: 5.5rem;
+    text-transform: uppercase;
+    z-index: 1;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
 
-        h1 {
-            font-family: "Oswald", Impact, "Franklin Gothic Bold", sans-serif;
-            font-weight: 700;
-            font-size: 80px;
-            line-height: 5.5rem;
-            text-transform: uppercase;
-            z-index: 1;
-            margin-top: 15px;
-            text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-            margin-bottom: 5px
-        }
+h2 {
+    font-family: "Open Sans", "Segoe UI", Tahoma, sans-serif;
+    font-weight: 300;
+    font-size: 28px;
+    margin-bottom: 45px;
+}
 
-        h2 {
-            font-family: "Open Sans", "Segoe UI", Tahoma, sans-serif;
-            font-weight: 300;
-            font-size: 28px;
-            text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-            margin-bottom: 45px
-        }
+.sauce {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
 
-        .sauce {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }
+.slow-fade {
+    -webkit-animation: fade-in 2.5s 1s forwards;
+    animation: fade-in 2.5s 1s forwards;
+    opacity: 0;
+}
 
-        .content--animation {
-            animation: fade-in 2.5s 1s forwards;
-            opacity: 0;
-        }
+.prettycolors {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background: -webkit-gradient(linear, left top, right top, from(#fd746c), color-stop(#ff8235), to(#e73827));
+    background: linear-gradient(to right, #fd746c, #ff8235, #e73827);
+    background-repeat: no-repeat;
+    background-size: 1000% 100%;
+    -webkit-animation: gradient 60s ease infinite;
+    animation: gradient 60s ease infinite;
+}
 
-        .prettycolors {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(to right, #fd746c, #ff8235, #e73827);
-            background-repeat: no-repeat;
-            background-size: 1000% 100%;
-            animation: gradient 60s ease infinite
-        }
+@-webkit-keyframes slide-in {
+    0% {
+        -webkit-transform: translateY(250px);
+        transform: translateY(250px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0px);
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes slide-in {
+    0% {
+        -webkit-transform: translateY(250px);
+        transform: translateY(250px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0px);
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes gradient {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
     </style>
 </head>
 
@@ -114,7 +173,7 @@
     <div class="prettycolors">
         <div class="sauce">
             <img src="/img/Logan-min-sq.jpg" alt="">
-            <div class="content--animation">
+            <div class="slow-fade">
                 <h1>Logan Houp</h1>
                 <h2>Web Developer</h2>
             </div>
