add webp portrait image to page

--- a/index.html
+++ b/index.html
@@ -172,7 +172,11 @@ h2 {
 <body>
     <div class="prettycolors">
         <div class="sauce">
-            <img src="/img/Logan-min-sq.jpg" alt="">
+            <picture>
+              <source srcset="/img/Logan-min-sq.webp" type="image/webp">
+              <source srcset="/img/Logan-min-sq.jpg" type="image/jpeg"> 
+              <img src="/img/Logan-min-sq.jpg" alt="portrait">
+            </picture>
             <div class="slow-fade">
                 <h1>Logan Houp</h1>
                 <h2>Web Developer</h2>
