--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ h2 {
         WebFont.load({
                 google: {
                     families: ["Oswald:700", "Open Sans"],
-                    text: "LOGANHUPWEBDVR"
+                    text: "LOGANHUP"
                 }
             }),
             function (e) {
