--- a/index.html
+++ b/index.html
@@ -182,9 +182,7 @@ h2 {
     <div class="prettycolors">
         <div class="sauce">
             <picture>
-              <source srcset="/img/Logan-min-sq.webp" type="image/webp">
-              <source srcset="/img/Logan-min-sq.jpg" type="image/jpeg"> 
-              <img src="/img/Logan-min-sq.jpg" alt="portrait">
+              <img src="https://avatars.githubusercontent.com/u/17230438" alt="portrait">
             </picture>
             <div class="slow-fade">
                 <h1>Logan Houp</h1>
